testsuite/tests/rename/should_fail/rnfail018.stderr

rnfail018.hs:12:37: error: [GHC-76037]
    Not in scope: type variable ‘a’

rnfail018.hs:12:42: error: [GHC-76037]
    Not in scope: type variable ‘m’

rnfail018.hs:12:47: error: [GHC-76037]
    Not in scope: type variable ‘m’

rnfail018.hs:12:49: error: [GHC-76037]
    Not in scope: type variable ‘a’
